@@ -103,6 +103,7 @@ namespace WebKit {
         virtual void print(WebCore::Frame*);
     private:
         WebKitGtkPage* m_webPage;
+        bool m_didSendLinkSignal;
     };
 }
 
